--- a/index.html
+++ b/index.html
@@ -7,26 +7,20 @@
 </head>
 <body>
     
-    <h1>Manual Dos Celulares</h1>
+    <h1>Manual Da Moda</h1>
     <P>www.Manualjj.com.br</P>
     <br>
-    <li>Melhores celulares atualizado 2025:</li>
-    <img src=https://images.samsung.com/is/image/samsung/assets/mx-faq-24/mx-faq-24-8-1/24-8-1-Hero.png?$ORIGIN_PNG$>
+    <h2>Melhores kits 2025</h2>
     <br>
+    <h2>Primeiro kit:</h2>
+    <img src="https://www.picclickimg.com/UG4AAOSwAyViVGJj/Corteiz-CRTZ-Alcatraz-Tracksuit-Baby-Blue.webp" alt="Track Suit Corteiz">
     <br>
-    <li>Iphone 16 pro max</li>
-    <li><iframe width="560" height="315" src="https://www.youtube.com/embed/XXfj6P--EjA?si=zMB6FL4ik_-5U4Zp" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    </li>
-    <li>O Apple iPhone 16 Pro Max é um smartphone iOS com características inovadoras que o tornam uma excelente opção para qualquer tipo de utilização, representando um dos melhores dispositivos móveis já feitos. A tela de 6.9 polegadas coloca esse Apple no topo de sua categoria. A resolução também é alta: 2868x1320 pixel. As funcionalidades oferecidas pelo Apple iPhone 16 Pro Max são muitas e todas top de linha. Começando pelo 5G que permite a transferência de dados e excelente navegação na internet, além de conectividade Wi-fi e GPS presente no aparelho. Tem também leitor multimídia, videoconferência, e bluetooth. Enfatizamos a excelente memória interna de 1024 GB mas sem a possibilidade de expansão.
-        A excelência deste Apple iPhone 16 Pro Max é completada por uma câmera de 48 megapixels que permite tirar fotos fantásticas com uma resolução de 8000x6000 pixels e gravar vídeos em 4K a espantosa resolução de 3840x2160 pixels. A espessura de 8.3 milímetros é realmente ótima e torna o Apple iPhone 16 Pro Max ainda mais espetacular.
-    </li>
-    <br>
-    <li>Realme C75</li>
-    <li><iframe width="560" height="315" src="https://www.youtube.com/embed/GD1fXOAZ_aA?si=PYK2sqPDHAwM04zo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    </li>
-    <li>O realme C75 é um smartphone Android de bom nível, ótimo para fotos, que pode satisfazer até o mais exigente dos usuários. Tem uma enorme tela Touchscreen de 6.72 polegadas com uma resolução de 2400x1080 pixel. Sobre as características deste realme C75 na verdade não falta nada. Começando pelo LTE 4G que permite a transferência de dados e excelente navegação na internet, além de conectividade Wi-fi e GPS. Tem também leitor multimídia, videoconferência e bluetooth. Enfatizamos a boa memória interna de 512 GB com a possibilidade de expansão.
-        O realme C75 é um produto com poucos concorrentes em termos de multimídia graças à câmera de 50 megapixels que permite ao realme C75 tirar fotos fantásticas com uma resolução de 8165x6124 pixels e gravar vídeos em alta definição (Full HD) com uma resolução de 1920x1080 pixels. Muito fino, 8 milímetros, o que torna o realme C75 realmente interessante.
-    </li>
+    <a href=https://shopee.com.br/Conjunto-CRT-Corteiz-Fashion-Street-Sweatshirt-Corteiz-Conjunto-CRTZ-Mulher-Lindo-Skate-Hip-Hop-Moda-Casual-Homem-i.243703158.22898079104
+    >ADQUIRA AQUI</a>
+
+
+
+    
 
 
 </body>
