--- a/index.html
+++ b/index.html
@@ -13,12 +13,14 @@
     <br>
     <h2>Melhores kits 2025</h2>
     <br>
-    <p style="color: rgb(21, 59, 229);font-size: 20px;"> Kit Corteiz Blue:</p>
-    <img src="https://www.picclickimg.com/UG4AAOSwAyViVGJj/Corteiz-CRTZ-Alcatraz-Tracksuit-Baby-Blue.webp" alt="Track Suit Corteiz">
+    <p style="color: rgb(102, 106, 232);font-size: 30px;background-color: black;"> Kit Corteiz Blue:</p>
+    <img style="height: 300px;"src="https://www.picclickimg.com/UG4AAOSwAyViVGJj/Corteiz-CRTZ-Alcatraz-Tracksuit-Baby-Blue.webp" alt="Track Suit Corteiz">
     <br>
-    <a href=https://shopee.com.br/Conjunto-CRT-Corteiz-Fashion-Street-Sweatshirt-Corteiz-Conjunto-CRTZ-Mulher-Lindo-Skate-Hip-Hop-Moda-Casual-Homem-i.243703158.22898079104
+    <a style="background-color: black;background-size: 20px;" href=//shopee.com.br/Conjunto-CRT-Corteiz-Fashion-Street-Sweatshirt-Corteiz-Conjunto-CRTZ-Mulher-Lindo-Skate-Hip-Hop-Moda-Casual-Homem-i.243703158.22898079104
     >ADQUIRA AQUI</a>
+
     
+
     
 <style>
     body {background-image: url(https://img.freepik.com/vetores-gratis/fundo-do-padrao-do-cifrao_23-2150979310.jpg
